Add files via upload
Secured the online-shop endpoints, added refresh token mechanism.